# limpiezaDataset

./: main.py  pyproject.toml
data/001_raw/: 29-may-2026.csv
data/002_intermediate/: 29_may_clean.parquet  may_torre.parquet
data/003_processed/: 29_may_clean.parquet
data/processed/: 29_may_clean.parquet
data/raw/: 002_Torre2.csv
notebooks/: 001_limpieza.ipynb  002_limpieza_Torre2.ipynb  004_analisis_Datos_Concatenados.ipynb
